# branch-rebaser

./: README.md  branch-rebaser.sh  pyproject.toml
branch_rebaser/: __init__.py  __main__.py  git_ops.py  tui.py
tests/: test_git_ops.py  test_tui.py
